--- a/Week-1/Task-2/sinif_tablosu.html
+++ b/Week-1/Task-2/sinif_tablosu.html
@@ -15,10 +15,11 @@
           border:1px solid black;
           padding: 15px;
         }
+        th{background-color: azure;}
         </style>
     <table>
       
-    <thead style="background-color:rgb(132, 138, 226);">
+    <thead>
     <tr>
       <th>Öğrenci Numarası</th>
       <th>Adı</th>
