--- a/Week-1/Task-2/sinif_tablosu.html
+++ b/Week-1/Task-2/sinif_tablosu.html
@@ -15,7 +15,7 @@
           border:1px solid black;
           padding: 15px;
         }
-        th{background-color: azure;}
+        th{background-color: rgb(59, 80, 199);}
         </style>
     <table>
       
