ilk web sayfasi

--- a/Week-1/Task-4/ilk_web_sayfasi.html
+++ b/Week-1/Task-4/ilk_web_sayfasi.html
@@ -43,6 +43,7 @@
     <div>
         <!-- img özelliğini indirdiğim jpe dosyasını bağlayarak kullandım -->
         <img src="ebru.jpeg" alt="Profil Fotoğrafı" width="150" height="150">
+        <h2>Özgeçmiş</h2>
         <p>Merhaba ben Ebru, Düzce Üniversite Bilgisayar Mühendisliği bölümünden mezun oldum. Yazılım bilgilerimin
             yetersiz olduğu ve bu eksikliği gidermek için Patika+ Front-End Web Development Programı katıldım bu program
             sayesinde hem öğrenip hem tecrübe sahibi oluyorum. Bu alanda ilerlemek ve iyi yerlere gelmek istiyorum.</p>
