Kişisel blog sayfası tamamlandı

--- a/Week-1/Task-5/hakkimda.html
+++ b/Week-1/Task-5/hakkimda.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif; 
             line-height: 1.6;
             margin: 20px;
-            background-color: rgb(136, 167, 136);
+            
         }
 
         .header {
@@ -22,27 +22,23 @@
         div {                            /*div başlığı altındaki değerleri değiştirir*/
             margin-bottom: 20px;
             border: 1px solid #333;
-            background-color: aliceblue;
+            background-color: rgb(241, 172, 108);
         }
 
         h2 {                             /*h2 başlığı altındaki yazıların altlarını çizer.*/
             text-decoration: underline;
 
         }
-
-        img {                           /* Resmi daire şeklinde yapar */
-            border-radius: 45%;
-            }
     </style>
 </head>
 
 <body>
+    <a href="kisisel_blog.html"><h3><b>Anasayfa</b></h3></a>
     <div class="header">
         <h1>Ebru Akcan</h1>
     </div>
     <div>
-        <!-- img özelliğini indirdiğim jpe dosyasını bağlayarak kullandım -->
-        <img src="ebru.jpeg" alt="Profil Fotoğrafı" width="150" height="150">
+        
         <p>Merhaba ben Ebru, Düzce Üniversite Bilgisayar Mühendisliği bölümünden mezun oldum. Yazılım bilgilerimin
             yetersiz olduğu ve bu eksikliği gidermek için Patika+ Front-End Web Development Programı katıldım bu program
             sayesinde hem öğrenip hem tecrübe sahibi oluyorum. Bu alanda ilerlemek ve iyi yerlere gelmek istiyorum.</p>
@@ -76,21 +72,6 @@
             İş Tanımı: Türkiye'deki en etkili kar amacı gütmeyen eğitim kuruluşlarından biri, binlerce insana teknoloji işlerine girmelerine yardımcı olan, sosyal etki ödülleri kazandıran ve büyük ölçekte teknoloji kariyeri için yol oluşturma konusunda birçok kişiye yol gösteren şirket. </p>
     </div>
 
-    <div>
-        <h2>Yetenekler</h2>
-        <ul>
-            <li>Müzikal Yetenek</li>
-            <li>Araştırmacı</li>
-            <li>Meraklı</li>
-        </ul>
-    </div>
-    <div>
-        <h2>Beceriler</h2>
-        <ol>
-            <li>Dikkat ve Gözlem</li>
-            <li>Sakinlik</li>
-        </ol>
-    </div>
 </body>
 
 </html>
