Kişisel blog sayfası tamamlnadı

--- a/Week-1/Task-5/kisisel_blog.html
+++ b/Week-1/Task-5/kisisel_blog.html
@@ -126,7 +126,7 @@
 
             <li>Attack on Titan</li>
             <div class="hover-div">
-                <img src="aot.png" alt="Attack on Titan posteri">
+                <img src="img/aot.png" alt="Attack on Titan posteri">
                 <p>İnsanoğlunu soyunun tükenmesi tehlikesiyle karşı karşıya bırakan Titanlar, yani metrelerce
                     yükseklikte insan formunda ama ilkel dev yaratıklar, insanları yiyerek yok etmektedir. İnsan
                     neslinin son temsilcileri kendilerini yüksek duvarların içine hapsederek korunmuş ve 100 yıldır tek
@@ -144,7 +144,7 @@
             <br>
             <li> Fullmetal Alchemist: Brotherhood</li>
             <div class="hover-div">
-                <img src="fullalchemist.png" alt="Fullmetal Alchemist posteri">
+                <img src="img/fullalchemist.png" alt="Fullmetal Alchemist posteri">
                 <p> Elric kardeşler Edward ve Alphonse ölen annelerini diriltmek için alchemy’e başvururlar. Ama insan
                     ruhunu ile değiş-tokuş yapılacak eş değerde bir şey bulunmamaktadır. Deney sırasında büyük kardeş
                     Edward bacağını,küçük kardeş Alphonse ise bedenini kaybeder. Edward elindeki son çareyi kullanıp
@@ -175,7 +175,7 @@
             </li>
 
             <div class="hover-div">
-                <img src="karayipkorsanlar.jpg" alt="Karayip Korsan posteri">
+                <img src="img/karayipkorsanlar.jpg" alt="Karayip Korsan posteri">
                 <p>Kaptan Jack Sparrow adında bir korsanın başından geçen olayların konu alındığı film serisidir.
                     Toplamda 5 seriden oluşuyor her serisi heyecan, macera ve aksiyon dolu <br> <br>
                     <b>Tür:</b>Bilim Kurgu, Aksiyon, Macera
@@ -189,7 +189,7 @@
             <li>Korkunç Bir Film Serisi</li>
 
             <div class="hover-div">
-                <img src="korkuncbirfilm.webp" alt="Korkunç bir film posteri">
+                <img src="img/korkuncbirfilm.webp" alt="Korkunç bir film posteri">
                 <p>Korku filmlerini alaya alan komedi üzerine kurulmuş komedi bir film serisidir. 5 seriden oluşuyor. Bu
                     filmlerin içeriğini anlayabilmek için korku filmlerini izlemek lazım. Çekilen korku filmlerine
                     atıfta bulunuyor. <br> <br>
@@ -207,7 +207,7 @@
             <li>Breaking Bad</li>
 
             <div class="hover-div">
-                <img src="breakingbad.jpg" alt="Breaking Bad posteri">
+                <img src="img/breakingbad.jpg" alt="Breaking Bad posteri">
                 <p> <b>Dizi İçeriği: </b> 50 yaşında sıradan bir kimya öğretmeni olan Walter White, akciğer kanseri
                     olduğunu ve sadece 2 yıl ömrünün kaldığını öğrenince tüm hayatını değiştirir.
                     Ailesinin rahat yaşaması için ne gerekiyorsa yapmaya hazırdır. Bu
@@ -224,7 +224,7 @@
             <li>The 100</li>
 
             <div class="hover-div">
-                <img src="the100.jpg" alt="The 100 posteri">
+                <img src="img/the100.jpg" alt="The 100 posteri">
                 <p>Yeryüzünde nükleer savaş sebebiyle insanlık ölümle yüzleşiyor ve dünyanın yüzeyi
                     yaşanılamayacak seviyede radyasyonla kaplanır. Yalnızca dünyanın yörüngesinde bulunan 12 farklı
                     ülkeye ait "Ark" ismindeki istasyonlarda yaşayanlar geride kalır. Nükleer savaş üzerinden 97 yıl
