--- a/Week-1/Task-3/form_elemanlari.html
+++ b/Week-1/Task-3/form_elemanlari.html
@@ -22,7 +22,7 @@
 
         <!-- Email Input -->
         <label for="email">Email:</label>
-        <input type="email" id="Email" name="email" required><br> <br>
+        <input type="email" id="email" name="email" required><br> <br>
 
         <!-- Password Input -->
         <label for="pwd">Parola:</label>
