--- a/Week-3/Task-3/index.html
+++ b/Week-3/Task-3/index.html
@@ -23,7 +23,7 @@
 <p> <q>Kişi, hayatındaki en önemli kişinin kendisi, en önemli tanıklığın da kendi tanıklığı olduğunu fark etmezse hiçbir zaman hayatla ilişkisini doğru kuramaz.</q></p>
 </div>
 <div class="footer">
-    Page Made For Ebru AKCAN Assignment
+    Page Made For Patika.dev Assignment
 </div>
 </body>
 </html>
