--- a/Week-3/Task-3/info.html
+++ b/Week-3/Task-3/info.html
@@ -31,7 +31,7 @@
         kitap kaleme aldı. 16 Şubat 2021’de, İstanbul’daki evinde 83 yaşında yaşama veda etti.</p>
    </div>
         <div class="footer">
-            Page Made For Ebru AKCAN Assignment
+            Page Made For Patika.dev Assignment
         </div>
     </body>
 
