--- a/Week-5/index.html
+++ b/Week-5/index.html
@@ -73,6 +73,12 @@
       <div class="my-10 text-center">
         <p class="italic">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, unde."</p>
         <p class="font-serif">Leroy Jenkins <br> CEO of Company Co.</p>
+        <div class="mt-4 flex justify-center items-center">
+          <div class="h-2.5 w-2.5 bg-gray-400 rounded-full mx-1"></div>
+          <div class="h-2.5 w-2.5 bg-gray-400 rounded-full mx-1"></div>
+          <div class="h-2.5 w-2.5 bg-gray-400 rounded-full mx-1"></div>
+          <div class="h-2.5 w-2.5 bg-gray-400 rounded-full mx-1"></div>
+        </div>
       </div>
     </div>
   </div>
