--- a/Week-5/Task-2/index.html
+++ b/Week-5/Task-2/index.html
@@ -69,7 +69,7 @@
 
 <body>
   <!--Navbar-->
-  <nav class="p-4 mx-6 border-b border-white-700">
+  <nav class="p-4 mx-6 border-b border-white-700 fixed">
     <div class="container mx-auto flex items-center ">
 
       <div class="hidden md:flex space-x-6 justify-start">
@@ -194,6 +194,7 @@
         <a href="https://www.pinterest.com" class="hover:text-gray-400">
           <i class="fab fa-pinterest text-xl"></i>
         </a>
+        
       </div>
     </div>
   </footer>
