--- a/Javascript/Todolist/index.html
+++ b/Javascript/Todolist/index.html
@@ -11,12 +11,64 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-  
+    <title>Yapılacaklar Listesi</title>
   </head>
   <body>
+    <div class="mr-1" style="position: relative">
+      <div style="position: absolute; top: 0; right: 0">
+        <div
+          id="liveToast"
+          class="toast success hide"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+          data-delay="4000"
+        >
+          <div>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="toast"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="toast-body">Listeye eklendi.</div>
+        </div>
+      </div>
+    </div>
+    <div class="mr-1" style="position: relative">
+      <div style="position: absolute; top: 0; right: 0">
+        <div
+          id="liveToast"
+          class="toast error hide"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+          data-delay="4000"
+        >
+          <div>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="toast"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="toast-body">Listeye boş ekleme yapamazsınız!</div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="header">
-      
+        <img
+          src="https://cdn.sanity.io/images/9kdepi1d/production/65c832d202a503b15d99e628f4313782f3ef50db-300x62.png"
+          class="mb-1"
+          alt=""
+        />
         <h2>Yapılacaklar Listesi</h2>
         <input type="text" id="task" placeholder="Bugün ne yapacaksın?" />
         <span onclick="newElement()" id="liveToastBtn" class="button"
@@ -24,8 +76,7 @@
         >
       </div>
 
-      <ul id="userList">
-        
+      <ul id="list">
       </ul>
       <script
         src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -38,11 +89,6 @@
         crossorigin="anonymous"
       ></script>
     </div>
-
-<div id="snackbar">Listeye boş ekleme yapamazsınız!</div>
-<div id="snackbar1">Listeye eklendi</div>
-<script src="TodoList.js"></script>
-
-
+    <script src="TodoList.js"></script>
   </body>
 </html>
