--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
     <p>Ana proje içeriği buraya gelecek.</p>
     <h2>Alt Projelere Git</h2>
     <p>
-        <a href="projects/project1/">Project 1</a>
+        <a href="Patika.dev/Javascript/">Project </a>
     </p>
-    <p>
-        <a href="projects/project2/">Project 2</a>
-    </p>
-    <p>
-        <a href="projects/project3/">Project 3</a>
-    </p>
+ 
 </body>
 </html>
