--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Ana proje içeriği buraya gelecek.</p>
     <h2>Alt Projelere Git</h2>
     <p>
-        <a href="Patika.dev/Javascript/">Project </a>
+        <a href="https://github.com/ebruakcn/Patika.dev/tree/main/Javascript/Chuck%20Norris">Project </a>
     </p>
  
 </body>
