--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
  
     <p>
-        <a href="https://github.com/ebruakcn/Patika.dev/tree/main/Javascript/Chuck%20Norris">Chuck Norris</a>
+        <a href="/Javascript/Chuck%20Norris">Chuck Norris</a>
     </p>
 
 </body>
